# hash256-cli

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh  check-state.js  gpu-miner.cu  gpu-miner.js  miner.js  package-lock.json  package.json  setup.sh
lib/: config.js  cpu-miner.js  cpu-worker.js  format.js  gas.js  gpu-miner.js  stats.js  tx-manager.js
native/: build_cuda.sh  cuda_miner.cu
src/: cuda.rs  main.rs
