[package]
name = "hash256-miner"
version = "8.0.0"
edition = "2021"
description = "High-performance GPU miner for HASH256 — CUDA + OpenCL + CPU"
license = "MIT"

[dependencies]
alloy = { version = "0.8", features = [
    "providers",
    "signers",
    "signer-local",
    "sol-types",
    "contract",
    "network",
    "rpc-types-eth",
    "reqwest",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
eyre = "0.6"
rpassword = "7"
num_cpus = "1"
rand = "0.8"
dotenvy = "0.15"
hex = "0.4"
ocl = { version = "0.19", optional = true }

[features]
default = ["gpu"]
gpu = ["dep:ocl"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
